z-index fixed on menu

--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -175,7 +175,7 @@ header {
         }
         ul {
           visibility: visible;
-          z-index: 100;
+          z-index: 200;
           opacity: 100%;
           color: $black;
           li {
@@ -187,6 +187,7 @@ header {
         .nav:before {
           visibility: visible;
           clip-path: circle(100%);
+          z-index: 100;
           position: fixed;
           top: 20px;
           border-radius: 10px;
